# StudioOpenCV

./: .gitignore  CMakeLists.txt  README.md
ressources/interface/: StudioOpenCV.glade
src/: main.cpp
src/core/Functions/: ExecuteFunction.cpp  ExecuteFunction.h  FunctionCPP.cpp  FunctionCPP.h  FunctionOpenCV.cpp  FunctionOpenCV.h  Variable.h
src/interface/: MainView.cpp  MainView.h
